--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     <li class="list"><a href="skintreatment.html">Skin Treatment</a></li>
                                     <li class="list"><a href="lasertreatment.html">laser Treatment</a></li>
                                     <li class="list"><a href="bodytreatment.html">body Treatment</a></li>
-                                    <li class="list"><a href="cosmo.html">cosmodermat Treatment</a></li> 
+                                    <li class="list"><a href="cosmo.html">cosmedermat Treatments</a></li> 
                                 </ul>
                                <!-- end--here -->
                             <li class="slimming">
@@ -78,6 +78,8 @@
                                         <li class="list7 list-cmn01"><a href="slimming.html#Wellness">WELLNESS TREATMENTS</a></li>
                                         <li class="list8 list-cmn01"><a href="slimming.html#Energy">BIO ENERGY THERAPY </a></li>
                                         <li class="list9 list-cmn01"><a href="slimming.html#VTRON">VTRON CTS TREATMENTS</a></li>
+                                        <li class="list10 list-cmn01"><a href="slimming.html">BUST TREATMENTS   </a></li>
+                                        <li class="list11 list-cmn01"><a href="slimming.html">FIGURE CORRECTION TREATMENT   </a></li>
                                     </ul>
                                 </div>
                                 <div class="sub-drop02 sub-cmn01">
@@ -166,6 +168,21 @@
                                             </ul> 
                                         </ul>
                                     </div>
+                                    <div class="Sub_Hvr_wrp10 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">B-Line Treatment - Bust Enhancement / Bust Reduction / Bust Firming</a></li>
+                                                <li><a href="#">Morpho- Bust</a></li>  
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp11 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">FIGURE CORRECTION</a></li>  
+                                            </ul> 
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +194,7 @@
                             </li>
                             <!-- drop--third -->
                             <ul class="drop_down drop3">
-                                <li class="list"><a href="hairtransplant.html">hair transplant ( men & Women )</a></li>
+                                <li class="list"><a href="hairtransplant.html">hair transplant <span style="font-size: 11px;">( men & Women )</span></a></li>
                                 <li class="list"><a href="prphair.html">PRP Treatment</a></li>
                                 <li class="list"><a href="scalp.html">Scalp & hair Treatment</a></li>
                                 <li class="list"><a href="hairpigment.html">hair Pigmentation</a></li> 
@@ -208,7 +225,7 @@
                                 <li class="list"><a href="#">Pink Lips</a></li>
                                 <li class="list"><a href="#">permanent eyebrow</a></li>
                                 <li class="list"><a href="#">permanent Eyeliner</a></li>
-                                <li class="list"><a href="#">permanent lip linear</a></li> 
+                                <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                 <li class="list"><a href="#">hair bleeding</a></li> 
                             </ul>
                            <!-- end--here -->
@@ -327,7 +344,9 @@
         </section>
 
         <!-- Our ---services -->
-        <section class="Service_wrapper wow fadeIn"  style="visibility: visible;"> 
+        <section class="Service_wrapper wow fadeIn"  style="visibility: visible;" data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="1500"> 
             <div class="container">
                 <div class="Service_heading">
                     <h2>Our<span> Services</span></h2>
@@ -407,7 +426,10 @@
         <!-- end-----here -->
 
         <!-- About---section---- -->
-          <section class="About_Wrapper wow fadeIn"  style="visibility: visible;">
+          <section class="About_Wrapper wow fadeIn"  style="visibility: visible;"
+          data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
              <div class="container">
                  <div class="About_Content">
                       <div class="Abt_left Abt_cmn01">
@@ -424,7 +446,9 @@
         <!-- end---here -->
 
         <!-- Book an Appointment -->
-        <section class="Appointment_Wrapper wow fadeIn"  style="visibility: visible;">
+        <section class="Appointment_Wrapper wow fadeIn"  style="visibility: visible;" data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="1500">
             <div class="Appointment_child">
                 <div class="container">
                     <div class="Appointment_Content">
@@ -443,7 +467,10 @@
         </section>
         <!-- end--here -->
         <!-- testimonials -->
-            <section class="Testimonial_Wrapper wow fadeIn"  style="visibility: visible;">
+            <section class="Testimonial_Wrapper wow fadeIn"  style="visibility: visible;"
+            data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
                 <div class="container">
                     <div class="Testimonial_heading">
                         <h2>Our <span>client says</span></h2>
@@ -490,7 +517,10 @@
         <!-- end---here -->
 
         <!-- form--wrp-->
-        <section class="Appointment_Form_wrp wow fadeIn"  style="visibility: visible;" id="Appointment_Form_wrp">
+        <section class="Appointment_Form_wrp wow fadeIn"  style="visibility: visible;" id="Appointment_Form_wrp"
+        data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
             <div class="container">
                 <div class="Apt_heading">
                     <img src="image/Apt1.png" alt="image">
@@ -611,14 +641,16 @@
      <!-- end --> 
 
         <!-- foooter-->
-              <footer >
+              <footer>
                   <div class="container">
                       <div class="mid-logo">
                           <figure>
                               <img src="image/Ftlogo.png" alt="image">
                           </figure>
                       </div>
-                      <div class="footer_content">
+                      <div class="footer_content"  data-aos="fade-up"
+                      data-aos-easing="linear"
+                      data-aos-duration="1500">
                           <div class="Ft01 Ft_cmn01">
                               <h2>QUICK LINKS</h2>
                               <ul>
