--- a/slimming.html
+++ b/slimming.html
@@ -218,7 +218,7 @@
                     </div>
                 </nav>
            </div>
-    </header> 
+    </header>  
         <!-- banner -->
         <section class="Slimming-Banner wow fadeIn"  style="visibility: visible;"> 
             <div class="container">
@@ -242,6 +242,18 @@
                </div>
           </div>
         </section> 
+        <div class="breadcumb-wrp"> 
+          <div class="sub-breadc-cnt">
+             <ul class="ul1">
+                <li><a href="mailto:contact@vlccwellness.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
+                <li>    <a href="Tel:9832048033"><i class="fa fa-phone"></i> +91 98320-48033</a></li>
+             </ul>
+             <ul class="ul2">
+                 <li><a href="#">Home</a></li>
+                <li class="page-active"> / <a href="#">Slimming</a></li>
+             </ul>
+         </div>
+        </div>
     <div class="Main-content-Wrapper wow fadeIn"  style="visibility: visible;">
             <!-- Slim--Service --> 
             <section class="Slim_Service">
@@ -586,12 +598,9 @@
                </div>
                <div class="W-right">
                 <h3>Arm Trim <span>Treatment</span></h3>
-                    <p>
-                    Not satisfied with just weight and inch loss and need something that does more? Try the COSSET WORLD Full Body Therapy, which includes both a G5 appliance and manual therapy. Our experts perform a massage with special oils on the lymphatic drainage lines. 
-                    </p>
-                    <p>
-                    This oil is absorbed in the skin and breaks down fat into fatty acids. The fatty acids are then released in the circulation and are used with weight loss appliances or with physical activities.
-                    </p>
+                   <p>
+                    It's a big concern to most of the peoples how the fats get accumulated in various parts of the body. Especially in the arms region, the fats makes it look dull and bulgy. Due to this, metabolic disorders occur and the movement of the arms is hampered also losing the flexibility of the skin in that area. But due to arm trim treatment, this disorder is fixed.
+                   </p>
                 </div> 
           </div>
         </div>
@@ -607,10 +616,7 @@
                <div class="W-right">
                 <h3>Hip Trim <span>Treatment</span></h3>
                     <p>
-                    Not satisfied with just weight and inch loss and need something that does more? Try the COSSET WORLD Full Body Therapy, which includes both a G5 appliance and manual therapy. Our experts perform a massage with special oils on the lymphatic drainage lines. 
-                    </p>
-                    <p>
-                    This oil is absorbed in the skin and breaks down fat into fatty acids. The fatty acids are then released in the circulation and are used with weight loss appliances or with physical activities.
+                        A curvy hip always looks attractive but fats getting accumulated there can be troublesome. The region of the hips are very sensitive and it's hard to cover it through normal exercise or treatments. As it is a vital part through which the whole leg is operated. If fats accumulate there the normal circulation may be hampered causing difficulty in walking. But getting a treatment well-proven to eliminate these problems will be worth your time. 
                     </p>
                 </div> 
           </div>
@@ -626,12 +632,9 @@
                </div>
                <div class="W-right">
                 <h3>Thigh Trim <span>Treatment</span></h3>
-                    <p>
-                    Not satisfied with just weight and inch loss and need something that does more? Try the COSSET WORLD Full Body Therapy, which includes both a G5 appliance and manual therapy. Our experts perform a massage with special oils on the lymphatic drainage lines. 
-                    </p>
-                    <p>
-                    This oil is absorbed in the skin and breaks down fat into fatty acids. The fatty acids are then released in the circulation and are used with weight loss appliances or with physical activities.
-                    </p>
+                  <p>
+                    Things get awkward when you are going out for a party or a function wearing a full-covered cloth but wondering about wearing a one-piece. That because of the fats accumulated in your thighs that make you look awful in a one-piece. Well, your imagination can turn into a reality, just by a simple thigh trim treatment. We use ultrasonic induction, toning and firming gels that can get back your slimy thighs.
+                  </p>
                 </div> 
           </div>
         </div>
@@ -858,12 +861,9 @@
                        </div>
                        <div class="W-right">
                          <h3>B-Line <span> Treatment  </span>- Bust Enhancement / Bust Reduction / Bust Firming</h3>
-                            <p>
-                                Conscious of wearing a bikini because of your smaller bust size or embarrassed by the size of your bust? Not only this, but, disproportionately large breasts can also cause neck pain, back pain, or other physical symptoms. 
-                            </p>
-                            <p>
-                                Cosset World brings to you a combination of manual massage for bust reduction along with a Firming Program which helps in tightening of tissues to avoid sagging of the breast and give and firmer uplifted breasts.
-                            </p>
+                             <p>
+                                Cognizant of wearing a bikini because of your smaller bust size or upset by the size of your bust? Not only this, but, bust larger than usual can also cause neck pain, back pain, or other bodily symptoms. Uniquely formulated products developed from herbal components are gently massaged into the bust to enhance and firmly shape it. We offer you a perfect combination of manual massage for bust reduction along with a Firming Program using German Technology to avoid sagging of bust and give the proper shape. This process also helps in tightening tissues and promote fuller and firmer uplifted breasts. 
+                             </p>
                         </div> 
                   </div>
              </div> 
@@ -878,10 +878,10 @@
                    <div class="W-right">
                      <h3>Morpho-<span> Bust  </span></h3>
                         <p>
-                            Aging, Pregnancy, genetics, breastfeeding, or lack of exercise can affect your bust line, causing it to sag or lose shape. Cosset world introduces Morpho bust – a revolutionary new and advanced noninvasive treatment that firms, tones and enhances your bust line. 
+                            Cosset World offers a professional treatment, a state-of-the-art reform intended to satisfy an ever-increasing demand for attractive bust curves while respecting the anatomy of the mammary gland. 
                         </p>
                         <p>
-                            The Morphobust treatment is a scientific ‘7-stage’ routine requiring a minimum of 6 sessions, each of which lasts for a minimum of 60 minutes and involves a combination of massage techniques and specialized products that help stimulate the different layers of your bosom. The carefully administered massage techniques and specialized ‘Shape Up’ products work in tandem to the firm, strengthen the support of the breasts and increase the production of collagen and elastin.
+                            MORPHO BUST is a complete revitalizing surgery with high-performance methods, which draw their efficacy from original ingredients.  
                         </p>
                     </div> 
               </div>
@@ -908,12 +908,9 @@
                        </div>
                        <div class="W-right">
                          <h3>FIGURE  <span> CORRECTION  </span></h3>
-                            <p>
-                            Not satisfied with just weight and inch loss and need something that does more? Try the COSSET WORLD Full Body Therapy, which includes both a G5 appliance and manual therapy. Our experts perform a massage with special oils on the lymphatic drainage lines. 
-                            </p>
-                            <p>
-                            This oil is absorbed in the skin and breaks down fat into fatty acids. The fatty acids are then released in the circulation and are used with weight loss appliances or with physical activities.
-                            </p>
+                           <p>
+                            Figure correction is the process concerning the toning of the body by losing weight particularly in the areas where it is more obvious like the abdomen and the hips. It mainly comprises a diet and workout regime that aids the body in losing excess fat while at the same time serving to build muscle mass which sculpts the body and assures that the lost kilos are not retrieved.
+                           </p>
                         </div> 
                   </div>
              </div> 
