--- a/skintreatment.html
+++ b/skintreatment.html
@@ -375,7 +375,7 @@
             </div>
             <div class="Service_content">
                 <div class="Grid_wrp">
-                    <div class="Grid-item1 Grid-item_cmn01">
+                    <div class="Grid-item1 Grid-item_cmn01" id="SkinTreat">
                         <div class="grid-hvr-content">
                             <div class="Hvr_cnt">
                                 <h2>Beauty</h2>
@@ -391,13 +391,13 @@
                     <div class="Grid-item2 Grid-item_cmn01 Grid__hvr0001">
                         <div class="grid-hvr-content">
                             <div class="Hvr_cnt">
-                                <h2>Laser</h2>
+                                <h2>permanent makeup</h2>
                                 <p>Be Beautiful With Our Services</p>
                                 <a href="#" class="hvr-radial-out">View Explore</a>
                             </div>
                         </div>
                         <div class="bottom_Bar">
-                            <h2> Laser</h2>
+                            <h2> permanent makeup</h2>
                             <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                         </div>
                     </div>
