--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <div class="Child_drop2">
                                 <div class="sub-drop01 sub-cmn01">
                                     <ul>
-                                        <li class="list1 list-cmn01 list-active"><a href="slimming.html#Loss">weight loss</a></li>
+                                        <li class="list1 list-cmn01 list-active"><a href="slimming.html#Loss" class="listAnckr1">weight loss</a></li>
                                         <li class="list2 list-cmn01"><a href="slimming.html#Gain">weight gain</a></li>
                                         <li class="list3 list-cmn01"><a href="slimming.html#Body">BODY THERAPIES</a></li>
                                         <li class="list4 list-cmn01"><a href="slimming.html#Spot">SPOT REDUCTION THERAPY</a></li>
